--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,12 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "favicon.ico",
-              "assets"
+              "src/favicon.ico",
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "/assets/"
+           }
             ],
             "styles": [
               "src/styles.scss"
